search twitter and generate a json

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>window.proca_twitter_list="https://climateandjobs.eu/proca-tweet/data/de-at.json";
+      window.proca_action_text=".{@}, merci d'avoir signé https://climateandjobs.eu/fr";
+    </script>
     <div id="app"></div>
     <div id="root"></div>
-    <script src="../src/index.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
