--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script>window.proca_twitter_list="https://climateandjobs.eu/proca-tweet/data/de-at.json";
-      window.proca_action_text=".{@}, merci d'avoir signé https://climateandjobs.eu/fr";
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+
+      window.proca_twitter_list= "%PUBLIC_URL%/json/"+urlParams.get('list')+".json";
+console.log("proca_twitter_list",window.proca_twitter_list);
+      window.proca_action_text=".{@}, thanks to have signed the openletter!";
     </script>
     <div id="app"></div>
     <div id="root"></div>
